--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "^2.0.0"
-    },
-    "require-dev": {
-        "doctrine/instantiator": "1.0.*",
-        "phpdocumentor/reflection-docblock": "~3.1.0",
-        "phpunit/phpunit": "^4.8"
+        "yiisoft/yii2": "^2.0.0",
+        "bower-asset/font-awesome" : "~4.7"
     },
     "autoload": {
         "psr-4": {
